[package]

name = "cql-rust"
version = "0.0.3"
authors = ["Adam Sunderland <iterion@gmail.com>"]
license = "MIT"

description = "Driver for the Cassandra CQL Binary Protocol v2"

keywords = ["cassandra", "cql", "database", "driver"]

repository = "https://github.com/iterion/cql-rust"

readme = "README.md"
